linked the buttons

--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
       </div>
       <!-- --- github button container --- -->
       <div class="btn-container">
-        <button class="git-btn">
-          <img src="icons/github-mark.svg" alt="github icon" />FOLLOW ME
-        </button>
-        <button class="git-btn">
-          <img src="icons/github-mark.svg" alt="github icon" />REPOSITORY
-        </button>
+        <a href="https://github.com/SkylimitzDevz" target="_blank">
+          <button class="git-btn">
+            <img src="icons/github-mark.svg" alt="github icon" />FOLLOW ME
+          </button>
+        </a>
+        <a
+          href="https://github.com/SkylimitzDevz/discount-calculator/pull/1"
+          target="_blank"
+        >
+          <button class="git-btn">
+            <img src="icons/github-mark.svg" alt="github icon" />REPOSITORY
+          </button>
+        </a>
       </div>
       <h3 id="name">By Ridma</h3>
     </div>
